List.of not supported in java 8